         Copy feature from branch `old-master-chrisism-python2`

DONE     [CORE] New ROM rendering engine. Copy feature from AML.
         These functions render ROMs in all kinds of launchers, either real or virtual.
         Functions render_ROMs(), render_ROMs_filter(), render_ROMs_process(), render_ROMs_commit().

WIP NOW  [CORE] Improved context menu handling.
         -> [WIP] Start with the Edit Category context menu (easiest).
         -> Then Edit ROM.
         -> Finally Edit Launcher (most complicated).
         Copy feature from branch `old-master-chrisism-python2` or create a new non-recursive implementation.

WIP      [CORE] Improved FileName class. All IO must be done using the FileName class.
         Copy feature from branch `old-master-chrisism-python2`

WIP      ==> Make a list of top priority new features, like the unified ROMs artwork directory,
         ==> the PID support, the new ROM's database fields, and add these features to the TODO list.
         ==> Have a look at the former master branch, there could be interesting features there
         ==> like the recursive context menus and the URL router class based on decorators.

--------------------------------------------------------------------------------------------------

WIP      [CORE] Support Kodi VFS and ROMs in remote filesystems for Retroplayer.
         See Chrisism patch in Github. Copy remote ROMs for external launchers?

WIP      [CORE] Proper support for Retroplayer launchers. Add functionality like
         Retroplayer core selection for each platform.

WIP      [CORE] Automatic generation of 3D Boxes using BoxFront and BoxSpine.
         Copy this feature from AML.

WIP      [CORE] Automatic generation of BoxTextures from BoxBack, BoxSpine and BoxFront.
         Copy this feature from AML.

WIP      [CORE] Unified ROM artwork directory. This will require heavy changes in categories.xml.
         I still have to think how to properly implement this. This is related to the